[gd_scene load_steps=6 format=2]

[ext_resource path="res://demo/fonts/big_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://demo/scenes/main/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://demo/images/background.jpg" type="Texture" id=3]
[ext_resource path="res://demo/scenes/other/CustomButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://demo/scenes/main/Settings.tscn" type="PackedScene" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color( 0.239216, 0.239216, 0.239216, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7

[node name="MainMenuScreen" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuScreen"]
margin_left = 195.0
margin_top = 79.0
margin_right = 828.0
margin_bottom = 521.0
mouse_filter = 2
custom_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="MainMenuScreen/VBoxContainer"]
margin_right = 633.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 1 )
text = "2 MINUTE ADVENTURE"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="MainMenuScreen/VBoxContainer"]
margin_top = 86.0
margin_right = 633.0
margin_bottom = 442.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuScreen/VBoxContainer/CenterContainer"]
margin_left = 106.0
margin_right = 526.0
margin_bottom = 356.0
rect_min_size = Vector2( 420, 0 )
mouse_filter = 2
custom_constants/separation = 20

[node name="Play" parent="MainMenuScreen/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 420.0
margin_bottom = 74.0
text = "PLAY"

[node name="Settings" parent="MainMenuScreen/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 94.0
margin_right = 420.0
margin_bottom = 168.0
text = "SETTINGS"

[node name="Credits" parent="MainMenuScreen/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 188.0
margin_right = 420.0
margin_bottom = 262.0
text = "CREDITS"

[node name="Exit" parent="MainMenuScreen/VBoxContainer/CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 282.0
margin_right = 420.0
margin_bottom = 356.0
text = "EXIT"

[node name="Settings" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="MainMenuScreen/VBoxContainer/CenterContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MainMenuScreen/VBoxContainer/CenterContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MainMenuScreen/VBoxContainer/CenterContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="MainMenuScreen/VBoxContainer/CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
